fix: inscription activity spacing

--- a/frontend/src/app/inscription-activity/inscription-activity.component.scss
+++ b/frontend/src/app/inscription-activity/inscription-activity.component.scss
@@ -25,6 +25,7 @@ a {
 .activity-container {
   position: absolute;
   height: 100%;
+  width: 100%;
 }
 
 .activity-content {
